--- a/css/responsive.css
+++ b/css/responsive.css
@@ -432,7 +432,7 @@
     }
     .account-container {
         padding: 4rem 10rem 4.5rem;
-        border-radius: 2rem;
+        margin: 0 4rem;
     }
     .account-title {
         font-size: 2.5rem;
