--- a/css/style.css
+++ b/css/style.css
@@ -875,4 +875,7 @@ gap: 4.5rem;
     display: -ms-flexbox;
     display: flex;
     gap: 1.5rem;
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
 }
