--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,8 @@ input, button {
     border-radius: 0.75rem;
     border: 3px solid rgba(255, 255, 255, 0.7);
     margin-bottom: 2rem;
+    max-width: 420px;
+    width: 100%;
 }
 .home-search i{
     font-size: 1.25rem;
@@ -262,9 +264,6 @@ input, button {
 .button:hover {
     background-color: rgb(143, 0, 0);
 }
-/* .nav-button {
-    display: none;
-} */
 
 /* SHOP */
 .shop-container {
