--- a/css/responsive.css
+++ b/css/responsive.css
@@ -69,7 +69,7 @@
         margin-right: 1rem;
     }
     .home-search {
-        width: 90%;
+        width: 100%;
     }
     }
 
@@ -345,6 +345,7 @@
     }
     .home-title {
         margin-bottom: 2rem;
+        font-size: 3rem;
     }
     .home-description, .home-search {
         margin-bottom: 3rem;
