--- a/css/style.css
+++ b/css/style.css
@@ -131,10 +131,10 @@ input, button {
 }
 .home-title, .home-value-number {
     color: var(--body-color);
-    font: var(--title-font);
+    font-family: var(--title-font);
 }
 .home-title {
-    font-size: var(--biggest-font-size);
+    font-size: var(--biggest-fonbot-size);
     line-height: 120%;
     margin-bottom: 1.25rem;
 }
@@ -142,6 +142,7 @@ input, button {
     color:  var(--text-lighter);
     margin-bottom: 2rem;
     line-height: 140%;
+    font-size: var(--h2-text);
 }
 .home-search {
     background-color: var(--body-color);
@@ -154,6 +155,7 @@ input, button {
             align-items: center;
     border-radius: 0.75rem;
     border: 3px solid rgba(255, 255, 255, 0.7);
+    margin-top: 5rem;
     margin-bottom: 2rem;
     max-width: 420px;
     width: 100%;
@@ -829,7 +831,7 @@ gap: 4.5rem;
             justify-content: center;
     list-style: none;
     width: 100%;
-    margin: 2.5rem 0;
+    margin: 2rem auto;
     gap: 2rem;
 }
 
@@ -838,14 +840,20 @@ gap: 4.5rem;
     background-color: var(--primary-color);
     font-family: var(--body-font);
     text-transform: capitalize;
-    font-size: var(--smaller-font-size);
+    font-size: 10px;
     -webkit-transition: 1s;
     -o-transition: 1s;
     transition: 1s;
-    color: var(--body-color);
+    color: var(--text-lighter);
+    position: relative;
 }
 .li-user p {
-    margin: 1rem 0;
+    padding: 0.5rem 0.5rem;
+    position: absolute;
+    bottom: 0;
+    background-color: var(--primary-color);
+    width: 100%;
+    opacity: 80%;
 }
 
 .li-user:hover {
@@ -853,15 +861,12 @@ gap: 4.5rem;
         -ms-transform: scale(1.1);
             transform: scale(1.1);
     background-color: var(--body-color);
-    color: var(--primary-color);
-    -webkit-box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
-            box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
 
 .img-user {
-    width: 200px;
-    height: 150px; 
+    width: 180px;
+    height: 180px; 
     -o-object-fit: cover; 
        object-fit: cover;
 }
@@ -876,5 +881,5 @@ gap: 4.5rem;
     gap: 1.5rem;
     max-width: 1000px;
     width: 100%;
-    margin: 0 auto;
+    margin: 0.25rem auto;
 }
