--- a/css/responsive.css
+++ b/css/responsive.css
@@ -321,7 +321,7 @@
         color: var(--secondary);
     }
     .nav-link:hover {
-        color: var(--primary);
+        color: var(--primary-color);
     }
     .nav-link i{
         display: none;
