--- a/css/style.css
+++ b/css/style.css
@@ -45,10 +45,13 @@ body {
 }
 
 h1, h2, h3 {
-    color: var(--text-body-color);
+    color: var(--h2-text);
     font-weight: var(--font-semibold);
 }
-
+h1 {
+    font-size: var(--h2-text);
+    margin-top: 1rem;
+}
 img {
     max-width: 100%;
     height: auto;
