--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,8 @@
     --title-font: 'Lora', serif;
     --biggest-font-size: 2.25rem;
     --h1-text:  1.5rem;
-    --h2-text: 1.25rem;
-    --h3-text: 1rem;
+    --h2-text: 1.5rem;
+    --h3-text: 1.25rem;
     --body-font-size: 0.938rem;
     --small-font-size: 0.813rem;
     --smaller-font-size: 0.75rem;
@@ -405,7 +405,7 @@ input, button {
     transition: 0.3s;
 }
 .info-accordion-title {
-    font-size: var(--small-font-size);
+    font-size: var(--body-font-size);
 }
 .info-accordion-arrows {
     display: -webkit-inline-box;
